Fixing alignment

--- a/scss/components/_messages.scss
+++ b/scss/components/_messages.scss
@@ -109,7 +109,7 @@
 }
 
 .message--mini {
-  background-position: u(1rem 1rem);
+  background-position: u(1rem) 50%;
   font-size: u(1.2rem);
   padding: u(.5rem 1rem .5rem 4rem);
 
@@ -202,10 +202,11 @@
   }
 
   .message--mini {
-    background-position: u(1rem .5rem);
+    background-position: u(1rem) 50%;
     background-size: u(2rem);
     font-size: u(1.2rem);
-    padding: u(.5rem 1rem .5rem 4rem);
+    line-height: u(1.4rem);
+    padding: u(1rem 1rem 1rem 4rem);
 
     &.message {
       min-height: 0;
