--- a/scss/modules/_data-container.scss
+++ b/scss/modules/_data-container.scss
@@ -139,7 +139,6 @@
 
   .data-container__message {
     display: inline-block;
-    height: u(3.4rem); // Setting explicitly so it lines up with button
     margin: 0 u(1rem) 0 0;
     vertical-align: middle;
   }
